# GraphicsLab05-OpenGLIntro

./: CMakeLists.txt
Part01/: Part01  simpleWindow.cpp
Part02/: Part02  basicShader.frag  basicShader.vert  redTriangle.cpp  simpleColor.frag  simpleColor.vert
Part03/: Part03  textureShader.frag  texturedCube.cpp
